[package]
name = "okx_connector"
version = "0.1.0"
edition = "2021"

[lib]
name = "okx_connector"
path = "src/lib.rs"

[[bin]]
name = "okx_demo"
path = "src/bin/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
reqwest = { version = "0.12.5", features = ["json"] }
futures-util = "0.3"
config = "0.14.0"
thiserror = "1.0"
url = "2.2"

[dev-dependencies]
mockito = "1.4.0"
tokio-test = "0.4"
wiremock = "0.6.0"
serde_json = "1.0"